security/firewall.tf
resource "aws_security_group" "sg_bastion" {
  name   = "sg_bastion"
  vpc_id = var.vpc_id

  ingress {
    description = "allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "sg_bastion - DM"
    Owner = "DM"
  }
}

resource "aws_security_group" "sg_appServers" {
  name   = "sg_appServers"
  vpc_id = var.vpc_id

  ingress {
    description = "allow SSH"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name  = "sg_appServers - DM"
    Owner = "DM"
  }
}
